--- a/.github/workflows/build-wg.yml
+++ b/.github/workflows/build-wg.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Clone official OpenWrt source
       run: |
         git clone --depth=1 --branch v23.05.5 https://git.openwrt.org/openwrt/openwrt.git openwrt
-        cp $GITHUB_WORKSPACE/.config openwrt/.config
+        cp $GITHUB_WORKSPACE/openwrt-config/.config
 
     - name: Install dependencies
       run: |
